Update OGP description a bit

--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ year: 2021
 title: DojoCon Japan
 subtitle: '見渡す - the 10th anniversary -'
 description: >- # this means to ignore newlines until "baseurl:"
-  子供のためのプログラミング道場、 CoderDojo の日本最大の祭典、DojoCon Japan 2020 の公式サイトです。
-  DojoCon は、主に CoderDojo を支える運営者やメンターたちを対象にしたカンファレンスであり
+  子どものためのプログラミング道場「CoderDojo」コミュニティによる日本最大の祭典、DojoCon Japan 2020 の公式サイトです。
+  DojoCon Japan は CoderDojo を支える運営者やメンターたちを主な対象としたカンファレンスであり
   CoderDojo の運営方法やノウハウの共有などに主眼が置かれています。
 url: https://dojocon2021.coderdojo.jp
 date_published: 2021年11月13日
