Update OGP description a bit

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ year: 2021
 title: DojoCon Japan
 subtitle: '見渡す - the 10th anniversary -'
 description: >- # this means to ignore newlines until "baseurl:"
-  子どものためのプログラミング道場「CoderDojo」コミュニティによる日本最大の祭典、DojoCon Japan 2020 の公式サイトです。
+  子どものためのプログラミング道場「CoderDojo」コミュニティによる日本最大の祭典、DojoCon Japan の公式サイトです。
   DojoCon Japan は CoderDojo を支える運営者やメンターたちを主な対象としたカンファレンスであり
   CoderDojo の運営方法やノウハウの共有などに主眼が置かれています。
 url: https://dojocon2021.coderdojo.jp
