--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,7 @@ year: 2021
 title: DojoCon Japan
 subtitle: '見渡す - the 10th anniversary -'
 description: >- # this means to ignore newlines until "baseurl:"
-  子どものためのプログラミング道場「CoderDojo」コミュニティによる日本最大の祭典、DojoCon Japan の公式サイトです。
-  DojoCon Japan は CoderDojo を支える運営者やメンターたちを主な対象としたカンファレンスであり
-  CoderDojo の運営方法やノウハウの共有などに主眼が置かれています。
+  CoderDojo コミュニティによる日本最大の祭典「DojoCon Japan」は CoderDojo 関係者を対象としたカンファレンスで、運営ノウハウの共有や関係者同士の交流に主眼が置かれています。
 url: https://dojocon2021.coderdojo.jp
 date_published: 2021年11月13日
 date_event: 2021年12月18日（土曜）10:00〜
