Shorten OGP description

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ year: 2021
 title: DojoCon Japan
 subtitle: '見渡す - the 10th anniversary -'
 description: >- # this means to ignore newlines until "baseurl:"
-  CoderDojo コミュニティによる日本最大の祭典「DojoCon Japan」は CoderDojo 関係者を対象としたカンファレンスで、運営ノウハウの共有や関係者同士の交流に主眼が置かれています。
+  CoderDojo コミュニティによる日本最大の祭典「DojoCon Japan」は CoderDojo 関係者を対象としたカンファレンスです。運営ノウハウの共有や関係者同士の交流などを目的として毎年開催されています。
 url: https://dojocon2021.coderdojo.jp
 date_published: 2021年11月13日
 date_event: 2021年12月18日（土曜）10:00〜
