--- a/_data/workshops.yml
+++ b/_data/workshops.yml
@@ -1,6 +1,14 @@
-# - title: ワークショップタイトル(例: Dojo日本地図-日本全国のCoderDojoを探してみよう- )
-#   stime: 開始時間(例: 10:00)
-#   etime: 終了時間(例: 12:40)
-#   tag: スペース区切りタグ(例:忍者向け)
-#   column: 列。0~2で指定(例:0)
-#   url: URL。(例: /session/dojo_report)
+# - title:  ワークショップタイトル
+#   badge:  must or none or double
+#   time:   時間
+#   text:   説明
+#   limit:  定員
+#   url:    URL
+
+# 例: ハックフォープレイ
+#- title: ハックフォープレイ30分コース
+#  badge: must
+#  time: 13:00-13:30
+#  text: あそべるプログラミング・ハックフォープレイを使って、JavaScript でゲームを作りましょう！初心者の方でもご参加いただけます。
+#  limit: 8
+#  url: https://dojocon-japan.doorkeeper.jp/events/114695
