Remove part of subtitle: '- the 10th anniversary -'

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 year: 2021
 title: DojoCon Japan
-subtitle: '見渡す - the 10th anniversary -'
+subtitle: '見渡す'
 description: >- # this means to ignore newlines until "baseurl:"
   CoderDojo コミュニティによる日本最大の祭典「DojoCon Japan」は CoderDojo 関係者を対象としたカンファレンスです。運営ノウハウの共有や関係者同士の交流などを目的として毎年開催されています。
 url: https://dojocon2021.coderdojo.jp
