--- a/_data/events.yml
+++ b/_data/events.yml
@@ -45,9 +45,9 @@
   tag: oVice会場企画
   url:
 
-- title: ？？？？？ッ？
-  text: 噂の？？？？？ッ？がDojoCon Japanに。続報にご期待ください。
+- title: はちみつカップ（予定）
+  text: 教育番マインクラフトによる、噂のはちみつカップがDojoCon Japanに。続報にご期待ください。
   img: event.jpg
-  time: ??:??-??:??
-  tag: ？？？？
+  time: 14:00-15:00
+  tag: oVice会場企画
   url:
