--- a/_data/events.yml
+++ b/_data/events.yml
@@ -45,9 +45,9 @@
   tag: oVice会場企画
   url:
 
-- title: はちみつカップ（予定）
-  text: 教育番マインクラフトによる、噂のはちみつカップがDojoCon Japanに。続報にご期待ください。
-  img: event.jpg
+- title: はちみつカップ体験会
+  text: はちみつカップとは、2021年に提唱された教育版マインクラフト及び「クリエイティブクラッシュ：働き蜂」を利用したインクルーシブな競技体験。参加者は蜂になり、広大な庭園で花の蜜を集めるという、なんとも緩いイースポーツです。<br><a class="font-weight-bold" href="../posts/11">詳細・参加方法</a>
+  img: 83-1.webp
   time: 14:00-15:00
   tag: oVice会場企画
   url:
