--- a/_data/events.yml
+++ b/_data/events.yml
@@ -32,11 +32,11 @@
   url:
 
 - title: アンカンファレンス
-  text: <strong>ブースG</strong><br>アンカンファレンスは、発表したいことや話し合いたいテーマを来場者自身が持ち寄ってディスカッションできる、オープンな形式のカンファレンスです。oVice会場内の特設ブースにて、ご希望の時間帯をエントリーしてください。CoderDojo JapanのFacebookグループでも事前受付中です。<br><a class="font-weight-bold btn btn-outline-primary" href="../posts/10">詳細・参加方法</a>
+  text: <strong>ブースG</strong><br>アンカンファレンスは、発表したいことや話し合いたいテーマを来場者自身が持ち寄ってディスカッションできる、オープンな形式のカンファレンスです。oVice会場内の特設ブースにて、ご希望の時間帯をエントリーしてください。CoderDojo JapanのFacebookグループでも事前受付中です。
   img: oVice_session_2020_dojoconjapan.png
   time: 10:00-12:00,13:00-15:00,15:30-17:30
   tag: oVice会場企画
-  url:
+  url: posts/10
 
 - title: メンター＆チャンピオン相談室
   text: <strong>ブースF</strong><br>各地で活躍されているメンターやチャンピオンが自然と集まるお部屋です。雑談、ご相談、何でもOKです。CoderDojoを立ち上げたい人、メンターをやってみたい人、CoderDojoを運営中のチャンピオンやメンターさん、どなたでもどうぞ。お気軽にお立ち寄りください！
@@ -46,8 +46,8 @@
   url:
 
 - title: はちみつカップ体験会
-  text: <strong>ブースC メインステージ</strong><br>はちみつカップとは、2021年に提唱された教育版マインクラフト及び「クリエイティブクラッシュ：働き蜂」を利用したインクルーシブな競技体験。参加者は蜂になり、広大な庭園で花の蜜を集めるという、なんとも緩いイースポーツです。<br><a class="font-weight-bold btn btn-outline-primary" href="../posts/11">詳細・参加方法</a>
+  text: <strong>ブースC メインステージ</strong><br>はちみつカップとは、2021年に提唱された教育版マインクラフト及び「クリエイティブクラッシュ：働き蜂」を利用したインクルーシブな競技体験。参加者は蜂になり、広大な庭園で花の蜜を集めるという、なんとも緩いイースポーツです。
   img: 83-1.webp
   time: 14:00-15:00
   tag: oVice会場企画
-  url:
+  url: posts/11
