--- a/_data/events.yml
+++ b/_data/events.yml
@@ -11,7 +11,7 @@
   url:
 
 - title: oVice特設オンライン会場
-  text: 昨年に引き続き、今年もoVice上に特設オンライン会場を用意しました。予定されているブースは次の通りです。<br>A:インフォメーションセンター、B:小ステージ、C:メインステージ、D:休息所、E:DojoHouse、F:相談室、G:アンカンファレンス登録所
+  text: 昨年に引き続き、今年もoVice上に特設オンライン会場を用意しました。予定されているブースは次の通りです。<br>A:インフォメーションセンター、B:小ステージ、C:メインステージ、D:休息所、E:DojoHouse、F:相談室、G:アンカンファレンス登録所、H:登壇者交流スペース
   img: map_number.webp
   time: 10:00-20:30
   tag: 特設オンライン会場
