--- a/_data/members.yml
+++ b/_data/members.yml
@@ -2,6 +2,45 @@
 #   site: ホームページやSNSなどのリンク
 #   img: 表示するアイコン画像。ない場合設定しなくてもよい。ディレクトリ /img/staff/ 内に配置。
 
-- name: '@yasulab'
-  site: 'https://twitter.com/yasulab'
-  img:  'https://yasslab.jp/img/photos/yasulab.jpg'
+- name: 増岡 秀樹
+  site: https://ja.gravatar.com/hansendo
+  img:  masuoka_hideki.png
+- name: 吉川 圭太
+  site: https://www.facebook.com/keita.yoshikawa/
+  img:  yoshikawa_keita.webp
+- name: まゆさん⤴︎
+  site: https://twitter.com/manidesign_i
+  img:  mayusan.jpg
+- name: Keisuke Sawa
+  site: https://twitter.com/swamptk
+  img:  sawa_keisuke.png
+- name: Katz Ueno
+  site: https://katzueno.com
+  img:  ueno_katz.jpg
+- name: 若林　潤一
+  site: https://twitter.com/Jun1W
+  img:  wakabayashi_junichi.jpg
+- name: 後藤 洋哉
+  site: https://coderdojo-inazawash.com
+  img:  goto_hiroya.jpg
+- name: 井上@津山
+  site: https://www.facebook.com/CoderDojoTsuyama/
+  img:  inoue.jpg
+- name: 井川 健一
+  site: https://coderdojo-mito.com/
+  img:  ikawa_kenichi.jpg
+- name: Genki Ando
+  site: https://twitter.com/gnk77
+  img:  ando_genki.jpg
+- name: yasulab
+  site: https://twitter.com/yasulab
+  img:  yasulab.jpg
+- name: 曽我 悠真
+  site: https://twitter.com/ymsg19
+  img:  soga_yuma.jpg
+- name: 濱田 康
+  site: https://linevoom.line.me/user/_dThsoIQo1WNmIYOd6T8nAWWCUYR4QdY-1DOnPE4
+  img:  hamada_yasushi.jpg
+- name: 井川 健一
+  site: https://coderdojo-mito.com/
+  img:  ikawa_kenichi.jpg
