Dojo中継に赤羽を追加

--- a/_data/events.yml
+++ b/_data/events.yml
@@ -4,7 +4,7 @@
 #   url:
 
 - title: Dojo中継
-  text: DojoCon Japan開催日当日に全国各地で開催されるCoderDojoをZoomでつなぐ場外企画です。DojoCon Japan 2021 のYouTubeライブやオンライン会場を楽しみながら、各地の開催会場でも盛りあがっちゃいましょう！<br>【参加予定会場】CoderDojo滝沢、富谷、会津、矢吹、となみ、飯能、末広町、品川御殿山、久地、天白、安城、灘、奈良、長門、香椎、名護(12/16時点)
+  text: DojoCon Japan開催日当日に全国各地で開催されるCoderDojoをZoomでつなぐ場外企画です。DojoCon Japan 2021 のYouTubeライブやオンライン会場を楽しみながら、各地の開催会場でも盛りあがっちゃいましょう！<br>【参加予定会場】CoderDojo滝沢、富谷、会津、矢吹、となみ、飯能、末広町、品川御殿山、赤羽、久地、天白、安城、灘、奈良、長門、香椎、名護(12/17時点)
   img: DojoNetwork.webp
   time: 10:00-18:00
   tag: 特別場外企画
