Follow naming pattern of members

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -32,7 +32,7 @@
 - name: Genki Ando
   site: https://twitter.com/gnk77
   img:  ando_genki.jpg
-- name: yasulab
+- name: 安川 要平
   site: https://twitter.com/yasulab
   img:  yasulab.jpg
 - name: 曽我 悠真
