--- a/_data/members.yml
+++ b/_data/members.yml
@@ -41,3 +41,18 @@
 - name: 濱田 康
   site: https://linevoom.line.me/user/_dThsoIQo1WNmIYOd6T8nAWWCUYR4QdY-1DOnPE4
   img:  hamada_yasushi.jpg
+- name: 宮島 衣瑛
+  img: miyajima_kirie.jpg
+- name: 宇津 義一
+  img: utsu_yoshikazu.jpg
+- name: 杉山 美鈴
+  img: sugiyama_misuzu.jpg
+- name: 若林 健一
+- name: 新妻 正夫
+- name: 納本 穂高
+- name: 黒柳 裕明
+- name: 佐伯 淳
+- name: 角田 一平
+  img: specialthanks.png
+- name: 牧 勝己
+  img: specialthanks.png
