Fix type: jekyll server -> jekyll serve #15

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -27,7 +27,7 @@
   "updateContentCommand": "bundle install",
   "postCreateCommand": "",
   "postAttachCommand": {
-    "server": "jekyll server"
+    "server": "jekyll serve"
   },
   "customizations": {
     "codespaces": {
