Fix wrong path to file to open in DevContainer #15

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,7 +32,7 @@
   "customizations": {
     "codespaces": {
       "openFiles": [
-        "index.html"
+        "index.md"
       ]
     },
     "vscode": {
