文言を修正

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ url: https://dojocon2023.coderdojo.jp
 date_published: 2023年oo月xx日
 date_event: 2023年8月27日（日曜）
 venue: >-
-  オンライン<br><small>(セッションは <a href='https://www.youtube.com/channel/UCX3tz875ZDtU85rFkYuwl5w' style='text-decoration: underline' target='_blank' rel='noopener'>YouTube</a> でライブ配信します)</small>
+  奈良女子大学 /  記念館
 price: 無料
 
 twitter:  DojoConJapan
