--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: 'Be Cool'
 description: >-
   CoderDojo コミュニティによる日本最大の祭典「DojoCon Japan」は CoderDojo 関係者を対象としたカンファレンスです。運営ノウハウの共有や関係者同士の交流などを目的として毎年開催されています。
 url: https://dojocon2023.coderdojo.jp
-date_published: 2023年oo月xx日
+date_published: 2023年6月11日
 date_event: 2023年8月27日（日曜）
 venue: >-
   奈良女子大学 /  記念館
