--- a/_data/members.yml
+++ b/_data/members.yml
@@ -1,115 +1,47 @@
-# - name: ここに表示したい名前
-#   site: ホームページやSNSなどのリンク
-#   img: 表示するアイコン画像。ない場合設定しなくてもよい。ディレクトリ /img/staff/ 内に配置。
-
 - name: 若林健一
   site: http://crssrds.jp/aboutme/
   img: kwaka1208.png
-- name: Hayashi Tetsuya
-  site:
-  img:
-- name: katzueno（上野）
-  site:
-  img:
-- name: 細谷崇@CoderDojo梅田/西宮
-  site:
-  img:
-- name: mrsksh@住吉（森﨑）
-  site:
-  img:
-- name: yasulab（安川）
-  site:
-  img:
-- name: 井上＠CoderDojo津山
-  site:
-  img:
-- name: 岡村明日香@師勝
-  site:
-  img:
+- name: Katz Ueno
+  site: https://katzueno.com
+  img: katzueno.jpg
+- name: 森﨑詩穂
+  site: https://coderdojo-sumiyoshi.square.site/
+  img: morisaki.png
+- name: 安川要平
+  site: https://twitter.com/yasulab
+  img: yasulab.png
+- name: 井上一
+  site: https://coderdojo津山.jp/
+  img: inoue1.jpg
+- name: あすか
+  site: https://note.com/cd_shikatsu/
 - name: 金江浩美
-  site:
   img: kanae.JPG
-- name: 小森
-  site:
-  img:
-- name: おごもり@大阪狭山
-  site:
-  img:
+- name: おごもり
+  site: https://github.com/ogom
 - name: とがぞの
-  site:
   img: togazono.png
-- name: chikako2020（橋立）
-  site:
-  img:
+- name: 橋立千賀子
+  site: https://twitter.com/CoderDojoHeguri
+  img: hashidate.jpeg
 - name: 渕崎愛
   site: https://deradesign.jp/
   img: fuchizaki.jpg
-- name: rinam（天沼）
-  site:
-  img:
 - name: たくや
-  site:
-  img:
-- name: たかはら@広報(富山)
-  site:
-  img:
-- name: KeisukeSawa@たまち
-  site:
-  img:
 - name: 吉川 圭太
-  site:
-  img:
-- name: Jun1（若林）@吉備(岡山)
-  site:
-  img:
-- name: 610t（武藤）
-  site:
-  img:
-- name: 石川善行
-  site:
-  img:
-- name: 土居安佳里
-  site:
-  img:
-- name: 石川博之/光
-  site:
-  img:
-- name: UedaSota（上田）
-  site:
-  img:
-- name: あんどうよしのぶ / ニンジャ
-  site:
-  img:
-- name: jishiha(石原淳也)
-  site:
-  img:
-- name: moriken314
-  site:
-  img:
+  site: https://coderdojo-tonami.org/
+  img: yoshikawa_keita.webp
+- name: 上田そうた
+- name: 森田憲
+  site: https://www.facebook.com/coderdojoinagawa/
+  img: moriken314.jpg
 - name: 加藤宗一郎
-  site:
-  img:
-- name: 宮島
-  site:
-  img:
-- name: 山口　秀帝
-  site:
-  img:
-- name: 北川 諒
-  site:
-  img:
-- name: 河合玲那
-  site:
-  img:
-- name: 佐原慎也
-  site:
-  img:
-- name: 北澤聖也
-  site:
-  img:
+- name: さんた
+  site: https://www.facebook.com/seiya.kitazawa.3/
+  img: santa.jpg
 - name: あかり
-  site:
+  site: https://twitter.com/redapple0414
   img: Akari.png
 - name: そうすけ
-  site:
-  img:
+  site: https://coderdojomizuho.com/self_introduction/pokenyaan/
+  img: Sosuke.png
