実行委員メンバー追加

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -23,11 +23,12 @@
   img: togazono.png
 - name: 橋立千賀子
   site: https://twitter.com/CoderDojoHeguri
-  img: hashidate.jpeg
+  img: Hashidate.jpg
 - name: 渕崎愛
   site: https://deradesign.jp/
   img: fuchizaki.jpg
 - name: たくや
+  img: takuya.jpg
 - name: 吉川 圭太
   site: https://coderdojo-tonami.org/
   img: yoshikawa_keita.webp
