フォームアドレス変更

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ price: 無料
 twitter:  DojoConJapan
 facebook: DojoConJapan
 email:    dojocon2023@coderdojo.jp
-contact: https://docs.google.com/forms/d/e/1FAIpQLSd7CqFmVf4DOOpcXn0Z9ndLnnWq8jKIh9R5O-Zjq508uoP0Zw/viewform
+contact: https://forms.gle/oMy8aA3fM8iyy8cs7
 
 # Build settings
 plugins:
