Google Maps追加、サイズ修正

--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ date_published: 2023年6月11日
 date_event: 2023年8月27日（日曜）
 venue: >-
   奈良女子大学 /  記念館
+map: https://goo.gl/maps/s6SMqez8qy7aDSmN6
 price: 無料
 
 twitter:  DojoConJapan
