ほぼ完成していますあと自動実行..

--- a/_data/exhibition.yml
+++ b/_data/exhibition.yml
@@ -5,7 +5,7 @@
   affiliation: coderdojo~
   img: test.JPG
   description: 参考・参照元、工夫したところ...
-  URL: https://makenew.panasonic.jp/magazine/articles/045/
+  URL: https://scratch.mit.edu/projects/863232799/
   path_URL: 1
   
 - title: Pythonで~
