Countdown DojoCon Japan 更新

--- a/_data/countdown.yml
+++ b/_data/countdown.yml
@@ -6,6 +6,13 @@
 - title: '#1 いよいよ始まる！'
   id: XyKhJxF0JbU
   date: 2023.06.29
-# - title: '#2 基調講演と風魔'
-#   id: TWw1iokCXlk
-#   date: 2023.07.06
+- title: '#2 基調講演とシカ風魔'
+  id: TWw1iokCXlk
+  date: 2023.07.06
+- title: '#3 ニンジャ大博覧会'
+  id: -9uz8IVof8w
+  date: 2023.07.13
+
+
+
+
