upsert_project_pages_by_data.rbが実行されない!

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -66,3 +66,6 @@ jobs:
       with:
         personal_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir:    ./_site
+    - name: 🤖 Generate individual pages by exhibition.yml data
+      run: |
+          bundle exec rake upsert_project_pages_by_data
