トップページにスポンサーのセクションを追加

--- a/_data/sponsor/bronze.yml
+++ b/_data/sponsor/bronze.yml
@@ -3,8 +3,8 @@
 #   link: ロゴからのリンク先
 
 - name: アールスリーインスティテュート
-  logo: 
+  logo: R3_Institute.png
   link: https://www.r3it.com/
 - name: 株式会社アドバンスト・ソフト
-  logo: 
+  logo: Advanced_Soft.png
   link: https://www.advn.co.jp/
