--- a/_data/sponsor/silver.yml
+++ b/_data/sponsor/silver.yml
@@ -3,11 +3,11 @@
 #   link: ロゴからのリンク先
 
 - name: ポノス株式会社
-  logo: 
+  logo: Ponos.png
   link: https://www.ponos.jp/
 - name: ユニーク・アイネット株式会社
-  logo: 
+  logo: Unique-i-net.png
   link: https://www.unique-inet.co.jp/
 - name: さくらインターネット株式会社
-  logo: 
+  logo: Sakura_Internet.png
   link: https://www.sakura.ad.jp/
