スポンサーロゴ追加

--- a/_data/sponsor/bronze.yml
+++ b/_data/sponsor/bronze.yml
@@ -8,3 +8,6 @@
 - name: 株式会社アドバンスト・ソフト
   logo: Advanced_Soft.png
   link: https://www.advn.co.jp/
+- name: 株式会社カプコン
+  logo: caplogo_e.png
+  link: https://www.capcom.co.jp/
