--- a/_data/sponsor/in-kind.yml
+++ b/_data/sponsor/in-kind.yml
@@ -1,3 +1,10 @@
 # - name: 企業名
 #   logo: ロゴ画像ファイル名（/img/{{ site.year }}/sponsor/ 以下に配置）
 #   link: ロゴからのリンク先
+
+ - name: YassLab 株式会社
+   logo: yasslab.png
+   link: https://yasslab.jp/ja/
+   description: Doorkeeper スポンサーシップのご提供
+
+
