スポンサー情報更新、esaロゴ更新

--- a/_data/sponsor/bronze.yml
+++ b/_data/sponsor/bronze.yml
@@ -1,13 +1,21 @@
-# - name: 企業名
+# - id: ID（スポンサーページのアンカータグになります）
+#   name: 企業名
 #   logo: ロゴ画像ファイル名（/img/{{ site.year }}/sponsor/ 以下に配置）
 #   link: ロゴからのリンク先
+#   msg: 企業紹介文
 
-- name: アールスリーインスティテュート
-  logo: R3_Institute.png
-  link: https://www.r3it.com/
-- name: 株式会社アドバンスト・ソフト
+- id: adbanced_soft
+  name: 株式会社アドバンスト・ソフト
   logo: Advanced_Soft.png
   link: https://www.advn.co.jp/
-- name: 株式会社カプコン
+  msg: 私たちは ITによって“より”気軽・便利・安心を提供し「よかった」を生み出します。私たちはこのミッションに、「既に便利なこの社会に“より”（更に）便利なものを提供したい」「お客様の期待を超えるサービスを提供したい」という想いを込めました。そして、私たちのサービスを利用して頂くお客様から「よかった」 と思ってもらえる関係を生み出すことが喜びです。
+- id: r3
+  name: アールスリーインスティテュート
+  logo: R3_Institute.png
+  link: https://www.r3it.com/
+  msg: アールスリーインスティテュートはkintoneをはじめとしクラウドサービスを駆使し、幅広いお客様へ問題解決手段を提供します。
+- id: capcom
+  name: 株式会社カプコン
   logo: caplogo_e.png
   link: https://www.capcom.co.jp/
+  msg: 当社は大阪に本社を置くゲームソフトメーカーです。オリジナリティあふれるゲームソフト開発力を強みに、人気コンテンツを多面展開（ワンコンテンツ・マルチユース）することにより、安定成長を遂げています。当社は今後も世界一面白いコンテンツで社会や人々を幸せにできる企業となることを目指します。
