--- a/_data/sponsor/in-kind.yml
+++ b/_data/sponsor/in-kind.yml
@@ -1,14 +1,17 @@
-# - name: 企業名
+# - id: ID（スポンサーページのアンカータグになります）
+#   name: 企業名
 #   logo: ロゴ画像ファイル名（/img/{{ site.year }}/sponsor/ 以下に配置）
 #   link: ロゴからのリンク先
 
-- name: YassLab 株式会社
+- id: yasslab
+  name: YassLab 株式会社
   logo: yasslab.png
   link: https://yasslab.jp/ja/
   description: Doorkeeper スポンサーシップのご提供
 
-- name: 合同会社 esa
-  logo: esa.png
+- id: esa
+  name: 合同会社 esa
+  logo: esa-logo__whitebg--transparent.png
   link: https://esa.io/
   description: ドキュメント共有サービスのご提供
 
