--- a/_data/sponsor/bronze.yml
+++ b/_data/sponsor/bronze.yml
@@ -4,7 +4,7 @@
 #   link: ロゴからのリンク先
 #   msg: 企業紹介文
 
-- id: adbanced_soft
+- id: advanced_soft
   name: 株式会社アドバンスト・ソフト
   logo: Advanced_Soft.png
   link: https://www.advn.co.jp/
