--- a/_data/sponsor/silver.yml
+++ b/_data/sponsor/silver.yml
@@ -9,7 +9,7 @@
   logo: Ponos.png
   link: https://www.ponos.jp/
   msg:  ポノスは、1990年の創業以来ゲームを通してエンターテインメントという文化の発展に貢献してまいりました。【求められるモノは創らない、それ以上を創り出す。】を掲げ、自分たちしか創れない価値をプラスしていくことを大切にしています。現在は、オリジナルゲーム開発を核に事業を展開し、代表タイトル『にゃんこ大戦争』は、累計DL8,200万を（2023年5月現在）超え、多くのお客様に楽しんでいただいております。
-- id: uniqye-inet
+- id: unique-i-net
   name: ユニーク・アイネット株式会社
   logo: Unique-i-net.png
   link: https://www.unique-inet.co.jp/
