--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,13 +59,25 @@ jobs:
     - name: 🔧 Build
       run: |
         JEKYLL_ENV=production bundle exec jekyll build
-
+        - name: 🤖 Generate individual pages by exhibiton.yml data
+        run: |
+            bundle exec rake upsert_project_pages_by_data
+            if [ -n "$(git status ./_posts --porcelain)" ]; then
+              if ( ruby -ryaml -e "p YAML.unsafe_load(STDIN.read)" < _data/exhibition.yml > /dev/null ); then
+                git config --global user.name  "Takuya wada"
+                git config --global user.email "takuyadayo014@gmail.com"
+                git checkout main
+                git add _posts/
+                git commit -m '🤖 Upsert project page(s) by GitHub Actions'
+                git push origin main
+              else
+                echo "Detect syntax error in '_data/exhibition.yml' file, check its syntax."
+              fi
+            fi
     - name: 🚀 Deploy to GitHub Pages
       if:   github.ref == 'refs/heads/main' && job.status == 'success'
       uses: peaceiris/actions-gh-pages@v3
       with:
         personal_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir:    ./_site
-    - name: 🤖 Generate individual pages by exhibition.yml data
-      run: |
-          bundle exec rake upsert_project_pages_by_data
+
