--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: Test & Deploy
 on:
   push:
     branches:
-      - main
+      - develop
   pull_request:
     branches:
       - "*"
@@ -62,14 +62,15 @@ jobs:
         - name: 🤖 Generate individual pages by exhibiton.yml data
         run: |
             bundle exec rake upsert_project_pages_by_data
-            if [ -n "$(git status ./_posts --porcelain)" ]; then
+            if [ -n "$(git status ./_pages --porcelain)" ]; then
               if ( ruby -ryaml -e "p YAML.unsafe_load(STDIN.read)" < _data/exhibition.yml > /dev/null ); then
-                git config --global user.name  "Takuya wada"
-                git config --global user.email "takuyadayo014@gmail.com"
+                git config --global user.name  "takusandayooo"
+                git config --global user.email "takusandayooo@users.noreply.github.com"
                 git checkout main
-                git add _posts/
+                git add _pages/exhibition
                 git commit -m '🤖 Upsert project page(s) by GitHub Actions'
-                git push origin main
+                # git push origin
+                git push origin develop 
               else
                 echo "Detect syntax error in '_data/exhibition.yml' file, check its syntax."
               fi
