--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,7 +36,7 @@ jobs:
 
   # Deploy job is triggered only pushed to main branch && CI passed
   deploy:
-    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/develop' }}
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/de' }}
     needs: test
     runs-on: ubuntu-latest
     steps:
@@ -59,22 +59,24 @@ jobs:
     - name: 🔧 Build
       run: |
         JEKYLL_ENV=production bundle exec jekyll build
-        - name: 🤖 Generate individual pages by exhibiton.yml data
-        run: |
-            bundle exec rake upsert_project_pages_by_data
-            if [ -n "$(git status ./_pages --porcelain)" ]; then
-              if ( ruby -ryaml -e "p YAML.unsafe_load(STDIN.read)" < _data/exhibition.yml > /dev/null ); then
-                git config --global user.name  "takusandayooo"
-                git config --global user.email "takusandayooo@users.noreply.github.com"
-                git checkout main
-                git add _pages/exhibition
-                git commit -m '🤖 Upsert project page(s) by GitHub Actions'
-                # git push origin
-                git push origin develop 
-              else
-                echo "Detect syntax error in '_data/exhibition.yml' file, check its syntax."
-              fi
-            fi
+
+    - name: 🤖 Generate individual pages by exhibition.yml data
+      run: |
+        bundle exec rake upsert_project_pages_by_data
+        if [ -n "$(git status ./_pages --porcelain)" ]; then
+          if ( ruby -ryaml -e "p YAML.unsafe_load(STDIN.read)" < _data/exhibition.yml > /dev/null ); then
+            git config --global user.name  "takusandayooo"
+            git config --global user.email "takusandayooo@users.noreply.github.com"
+            git checkout main
+            git add _pages/exhibition
+            git commit -m '🤖 Upsert project page(s) by GitHub Actions'
+            # git push origin
+            git push origin develop 
+          else
+            echo "Detect syntax error in '_data/exhibition.yml' file, check its syntax."
+          fi
+        fi
+        
     - name: 🚀 Deploy to GitHub Pages
       if:   github.ref == 'refs/heads/main' && job.status == 'success'
       uses: peaceiris/actions-gh-pages@v3
