--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,7 +36,7 @@ jobs:
 
   # Deploy job is triggered only pushed to main branch && CI passed
   deploy:
-    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/de' }}
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/develop' }}
     needs: test
     runs-on: ubuntu-latest
     steps:
@@ -76,7 +76,7 @@ jobs:
             echo "Detect syntax error in '_data/exhibition.yml' file, check its syntax."
           fi
         fi
-        
+
     - name: 🚀 Deploy to GitHub Pages
       if:   github.ref == 'refs/heads/main' && job.status == 'success'
       uses: peaceiris/actions-gh-pages@v3
