--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -67,7 +67,7 @@ jobs:
           if ( ruby -ryaml -e "p YAML.unsafe_load(STDIN.read)" < _data/exhibition.yml > /dev/null ); then
             git config --global user.name  "takusandayooo"
             git config --global user.email "takusandayooo@users.noreply.github.com"
-            git checkout main
+            git checkout develop
             git add _pages/exhibition
             git commit -m '🤖 Upsert project page(s) by GitHub Actions'
             # git push origin
