--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: Test & Deploy
 on:
   push:
     branches:
-      - develop
+      - main
   pull_request:
     branches:
       - "*"
@@ -36,7 +36,7 @@ jobs:
 
   # Deploy job is triggered only pushed to main branch && CI passed
   deploy:
-    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/develop' }}
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
     needs: test
     runs-on: ubuntu-latest
     steps:
@@ -67,12 +67,12 @@ jobs:
           if ( ruby -ryaml -e "p YAML.unsafe_load(STDIN.read)" < _data/exhibition.yml > /dev/null ); then
             git config --global user.name  "takusandayooo"
             git config --global user.email "takusandayooo@users.noreply.github.com"
-            git checkout develop
+            git checkout main
             git add _pages/exhibition
             git add Gemfile.lock
             git commit -m '🤖 Upsert project page(s) by GitHub Actions'
             # git push origin
-            git push origin develop 
+            git push origin main
           else
             echo "Detect syntax error in '_data/exhibition.yml' file, check its syntax."
           fi
