ymlのファイル名を小文字にしました

--- a/_data/exhibition.yml
+++ b/_data/exhibition.yml
@@ -3,7 +3,7 @@
   tag: Scratch（ゲーム、アニメーションなど）
   creator: たくや
   affiliation: coderdojo~
-  img: test.JPG
+  img: test.jpg
   description: 参考・参照元、工夫したところ...
   URL: https://scratch.mit.edu/projects/863232799/
   path_URL: 1
@@ -13,7 +13,7 @@
   tag: Scratch以外の言語による作品
   creator: たくや
   affiliation: coderdojo~
-  img: test.JPG
+  img: test.jpg
   description: 参考・参照元、工夫したところ...
   URL: https://makenew.panasonic.jp/magazine/articles/045/
   path_URL: 2
@@ -22,7 +22,7 @@
   tag: Scratch以外の言語による作品
   creator: たくや
   affiliation: coderdojo~
-  img: test.JPG
+  img: test.jpg
   description: 参考・参照元、工夫したところ...
   URL: https://makenew.panasonic.jp/magazine/articles/045/
   path_URL: 3
@@ -31,7 +31,7 @@
   tag: Scratch以外の言語による作品
   creator: たくや
   affiliation: coderdojo~
-  img: test.JPG
+  img: test.jpg
   description: 参考・参照元、工夫したところ...
   URL: https://makenew.panasonic.jp/magazine/articles/045/
   path_URL: 4
