--- a/_data/members.yml
+++ b/_data/members.yml
@@ -20,6 +20,7 @@
   site: https://note.com/cd_shikatsu/
 - name: おごもり
   site: https://github.com/ogom
+  img: 471923.jpg
 - name: とがぞの
   img: togazono.png
 - name: 橋立千賀子
@@ -34,6 +35,9 @@
 - name: たくや
   site: https://takusanda.com/gallery/#
   img: takuya.jpg
+- name: KeiskeSawa
+  site: https://twitter.com/swamptk
+  img: keisuke.sawa.jpg
 - name: 吉川 圭太
   site: https://coderdojo-tonami.org/
   img: yoshikawa_keita.webp
@@ -47,6 +51,12 @@
   img: moriken314.jpg
 - name: 加藤宗一郎
   img: soichiro-kato.PNG
+- name: 山口秀帝
+  img: Yamaguchi1.jpg
+- name: れいにゃん
+- name: 佐原慎也
+  site: https://www.facebook.com/shinya.sahara.92
+  img: Sahara.jpg
 - name: さんた
   site: https://www.facebook.com/seiya.kitazawa.3/
   img: santa.jpg
@@ -56,9 +66,14 @@
 - name: そうすけ
   site: https://coderdojomizuho.com/self_introduction/pokenyaan/
   img: Sosuke.png
+- name: Sakura
+  site: https://twitter.com/sugariayataka
+  img: Sakura.jpg
 - name: おさるさんの神様適当
   site: https://twitter.com/kamisamatekitou
   img: monkey.png
 - name: あべま
   site: https://coderdojomizuho.com/self_introduction/abema/
+  img: abema.png
 - name: たくみ
+- name: こと
