メンバー追加

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -66,6 +66,7 @@
 - name: そうすけ
   site: https://coderdojomizuho.com/self_introduction/pokenyaan/
   img: Sosuke.png
+- name: ゆうか
 - name: Sakura
   site: https://twitter.com/sugariayataka
   img: Sakura.jpg
