Google Page ランク向上のため、SSL 対応済みの場合は HTTPS に変更
cf. Google - ランキング シグナルとしての HTTPS
https://developers.google.com/search/blog/2014/08/https-as-ranking-signal

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -1,5 +1,5 @@
 - name: 若林健一
-  site: http://crssrds.jp/aboutme/
+  site: https://crssrds.jp/aboutme/
   img: kwaka1208.png
 - name: Katz Ueno
   site: https://katzueno.com
