実行委員更新

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -46,11 +46,16 @@
   img: jun1.jpg
 - name: 石川善行
 - name: 上田そうた
+- name: 石原淳也
+  site: http://blog.champierre.com
+  img: 10215.png
 - name: 森田憲
   site: https://www.facebook.com/coderdojoinagawa/
   img: moriken314.jpg
 - name: 加藤宗一郎
   img: soichiro-kato.PNG
+- name: 宮島衣瑛
+  img: miyajima_kirie.jpg
 - name: 山口秀帝
   img: Yamaguchi1.jpg
 - name: れいにゃん
