実行委員更新

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -45,6 +45,9 @@
   site: https://twitter.com/Jun1W
   img: jun1.jpg
 - name: 石川善行
+- name: 石川博之
+  site: https://www.facebook.com/y3sei
+  img: ishikawa.jpg
 - name: 上田そうた
 - name: 石原淳也
   site: http://blog.champierre.com
