--- a/_data/members.yml
+++ b/_data/members.yml
@@ -62,6 +62,7 @@
 - name: 山口秀帝
   img: Yamaguchi1.jpg
 - name: れいにゃん
+  img: reinyan.png
 - name: 佐原慎也
   site: https://www.facebook.com/shinya.sahara.92
   img: Sahara.jpg
@@ -84,5 +85,6 @@
 - name: あべま
   site: https://coderdojomizuho.com/self_introduction/abema/
   img: abema.png
+- name: しゅんたろう
 - name: たくみ
 - name: こと
