石原さんリンク変更

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -50,7 +50,7 @@
   img: ishikawa.jpg
 - name: 上田そうた
 - name: 石原淳也
-  site: http://blog.champierre.com
+  site: https://twitter.com/jishiha
   img: 10215.png
 - name: 森田憲
   site: https://www.facebook.com/coderdojoinagawa/
