実行員更新

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -49,6 +49,7 @@
   site: https://www.facebook.com/y3sei
   img: ishikawa.jpg
 - name: 上田そうた
+- name: よしのぶ
 - name: 石原淳也
   site: https://twitter.com/jishiha
   img: 10215.png
