実行委員掲載内容変更

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -59,9 +59,11 @@
 - name: 加藤宗一郎
   img: soichiro-kato.PNG
 - name: 宮島衣瑛
-  img: miyajima_kirie.jpg
+  img: kirie-25-square.jpg
+  site: https://innovation-power.jp/ceo
 - name: 山口秀帝
   img: Yamaguchi1.jpg
+- name: 鉄道パークR
 - name: れいにゃん
   img: reinyan.png
 - name: 佐原慎也
