インカインドスポンサー追加

--- a/_data/sponsor/in-kind.yml
+++ b/_data/sponsor/in-kind.yml
@@ -15,4 +15,9 @@
   link: https://esa.io/
   description: ドキュメント共有サービスのご提供
 
+- id: stellalink
+  name: 株式会社ステラリンク
+  logo: stellalink.png
+  link: https://www.stellalink.co.jp/
+  description: 会場ネットワークのご提供
 
