--- a/_data/sponsor/bronze.yml
+++ b/_data/sponsor/bronze.yml
@@ -19,3 +19,8 @@
   logo: caplogo_e.png
   link: https://www.capcom.co.jp/
   msg: 当社は大阪に本社を置くゲームソフトメーカーです。オリジナリティあふれるゲームソフト開発力を強みに、人気コンテンツを多面展開（ワンコンテンツ・マルチユース）することにより、安定成長を遂げています。当社は今後も世界一面白いコンテンツで社会や人々を幸せにできる企業となることを目指します。
+- id: geolonia
+  name: 株式会社Geolonia
+  logo: geolonia.png
+  link: https://www.geolonia.com/
+  msg: Geoloniaは、位置情報基盤を通じて、社会が抱える様々な課題を解決できる企業を目指すスタートアップです。IoT、スマートシティーなど、国、自治体、企業のDXが進むにつれて重要な「地図」「地理空間情報」「ロケーションデータ」の分野で、ウェブ地図提供事業、位置情報開発支援事業、ロケーションプラットフォーム事業を展開しています。
