toioワークショップの案内追加

--- a/_data/events.yml
+++ b/_data/events.yml
@@ -22,7 +22,7 @@
   # img: /img/2023/event/ninja-big-expo.jpg
   time: 13:20-14:50
   tag: 要申し込み
-  # url: /coderdojo-yatai/
+  url: /toio-workshop/
 
 - title: メンター向けHackforPlayワークショップ
   text: HackforPlayを使ったワークショップの実践をCoderDojoのメンター向けに実施します（詳細・申し込みはもう少しお待ちください）。
