イベント説明修正

--- a/_data/events.yml
+++ b/_data/events.yml
@@ -18,7 +18,7 @@
   url: /coderdojo-yatai/
 
 - title: メンター向けtoioワークショップ
-  text: toioを使ったロボットプログラミングワークショップの実践をCoderDojoのメンター向けに実施します（詳細・申し込みはもう少しお待ちください）。
+  text: CoderDojoのメンターのみなさんにロボットプログラミングや工作系活動・ワークショップのコツを実際にtoioを触りながら共有します。
   # img: /img/2023/event/ninja-big-expo.jpg
   time: 13:20-14:50
   tag: 要申し込み
