--- a/_data/events.yml
+++ b/_data/events.yml
@@ -19,7 +19,7 @@
 
 - title: メンター向けtoioワークショップ
   text: CoderDojoのメンターのみなさんにロボットプログラミングや工作系活動・ワークショップのコツを実際にtoioを触りながら共有します。
-  # img: /img/2023/event/ninja-big-expo.jpg
+  img: /img/2023/event/toio-workshop.png
   time: 13:20-14:50
   tag: 要申し込み
   url: /toio-workshop/
