--- a/_data/sponsor/individual.yml
+++ b/_data/sponsor/individual.yml
@@ -9,3 +9,6 @@
 - name: 上田Jack
 - name: 林向達
   link: https://con3.com/sc2scratch/
+- name: Shintaro TAKABA
+- name: 大庭 慎一郎
+  link: https://twitter.com/ooba
