--- a/_data/events.yml
+++ b/_data/events.yml
@@ -19,10 +19,10 @@
 
 - title: メンター向けHackforPlayワークショップ
   text: HackforPlayを使ったワークショップの実践をCoderDojoのメンター向けに実施します（詳細・申し込みはもう少しお待ちください）。
-  # img: /img/2023/event/ninja-big-expo.jpg
+  img: /img/2023/event/DojoCon2023-HackforPlay.png
   time: 15:00-16:30
   tag: 要申し込み
-  # url: /coderdojo-yatai/
+  # url: /toio-workshop/
 
 - title: CoderDojo屋台にようこそ！
   text: このワークショップでは、デジタル物作りの体験を提供します。CoderDojoに参加する子供達が主催です。また出展者の子供達と交流する機会があるので、物作りを楽しむ子供達の世界を垣間見ることができます。デジタル物作りに興味がある全ての子供と保護者が対象です。
