個人スポンサー追加

--- a/_data/sponsor/individual.yml
+++ b/_data/sponsor/individual.yml
@@ -13,3 +13,5 @@
 - name: 大庭 慎一郎
   link: https://twitter.com/ooba
 - name: 井上 一
+- name: Hiroki Iida
+  link: https://my.prairie.cards/u/hiroki_iida_
