--- a/_data/events.yml
+++ b/_data/events.yml
@@ -3,6 +3,13 @@
 #   img:
 #   url:
 
+- title: Why CoderDojo Wall
+  text: 最近CoderDojoの数も増えてきて、どこどこのDojoの人と話してみたいのだけどどんな人なんだろう？新しいチャンピオンの方はどんな方なんだろう、そもそもどんなDojoの人が来ているんだろうと思うこともあるのではないでしょうか。DojoCon Japan 2023は、日本中からCoderDojoのチャンピオンが集まるせっかくの機会なので、顔と名前を覚えてもらって当日の交流を促進しようという企画「CoderDojoサミット」を実施します。
+  img: /img/2023/event/why-coderdojo-wall.png
+  time: 12:15-16:30
+  tag: 申し込み不要
+  url: /why-coderdojo-wall/
+
 - title: CoderDojoサミット
   text: 最近CoderDojoの数も増えてきて、どこどこのDojoの人と話してみたいのだけどどんな人なんだろう？新しいチャンピオンの方はどんな方なんだろう、そもそもどんなDojoの人が来ているんだろうと思うこともあるのではないでしょうか。DojoCon Japan 2023は、日本中からCoderDojoのチャンピオンが集まるせっかくの機会なので、顔と名前を覚えてもらって当日の交流を促進しようという企画「CoderDojoサミット」を実施します。
   img: /img/2023/event/coderdojo-summit.png
@@ -22,7 +29,7 @@
   img: /img/2023/event/DojoCon2023-HackforPlay.png
   time: 15:00-16:30
   tag: 要申し込み
-  # url: /toio-workshop/
+  url: /toio-workshop/
 
 - title: CoderDojo屋台にようこそ！
   text: このワークショップでは、デジタル物作りの体験を提供します。CoderDojoに参加する子供達が主催です。また出展者の子供達と交流する機会があるので、物作りを楽しむ子供達の世界を垣間見ることができます。デジタル物作りに興味がある全ての子供と保護者が対象です。
@@ -35,5 +42,5 @@
   text: ニンジャ大博覧会は、CoderDojoに参加する子どもたち（ニンジャ）によるオンラインと現地の2箇所で開催する作品展示会です。プログラミング作品はもちろん、マインクラフト作品もOK。ぜひみんなの作品を見せてください、楽しみにまってます！
   img: /img/2023/event/ninja-big-expo.jpg
   time: オンライン＆現地
-  tag: 要申込み
+  tag: 要申し込み
   url: /expo/
