イベント説明修正

--- a/_data/events.yml
+++ b/_data/events.yml
@@ -25,7 +25,7 @@
   url: /toio-workshop/
 
 - title: メンター向けHackforPlayワークショップ
-  text: HackforPlayを使ったワークショップの実践をCoderDojoのメンター向けに実施します（詳細・申し込みはもう少しお待ちください）。
+  text: CoderDojoのメンターのみなさんに、プログラミングWebサイト・HackforPlay（ハックフォープレイ）の魅力を実践を交えて紹介します。
   img: /img/2023/event/DojoCon2023-HackforPlay.png
   time: 15:00-16:30
   tag: 要申し込み
