--- a/_data/exhibition.yml
+++ b/_data/exhibition.yml
@@ -16,3 +16,163 @@
   description: マレーシアのペナン島にある世界遺産のジョージタウンの模様や景色を参考にしています。
   URL: https://www.canva.com/design/DAFigu5zJnU/idy37rTovKKAyFa6E4g39A/watch?utm_content=DAFigu5zJnU&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink
   path_URL: 1
+
+- title: scratchタイピング
+  text: 出てきた文字を打つタイピングゲームです。<br>この作品は、普通のタイピングゲームとは違い、出てきた英語の通りに打つゲームです。<br>BGMがないと気分が上がらないと思ったので、BGMにこだわりました。
+  tag: Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）
+  creator: Megane-kun28
+  affiliation: coderdojo大船
+  img: 2.jpg
+  description: ないです。
+  URL: https://scratch.mit.edu/projects/873908710/
+  path_URL: 2
+
+- title: コース攻略したぞ！
+  text: 深川小学校の仲良し３人組「りゅうのすけ」「くぼっち」「SOU」です。<br>授業でも導入されている「ｍBot」を使って、自動運転によるコース攻略に挑戦。mBotの機能をフルで使うべく一人１台、合計３台を活用し、①コースを走らせる、②パネルに文字を表示して応援する、③音楽で盛り上げるプログラムを組みました。<br>①「りゅうのすけ」は、走行を担当。ラインセンサーとスピードを工夫して、内側の細いラインのコースを走らせることに成功！<br>②「くぼっち」は、LEDパネルにチーム名や自分たちの名前を表示。見ている人に読みやすい光の配置を工夫！<br>③「SOU」は音楽を担当。何度も聞きながら、音の長さを調整し曲に仕上げ、曲と曲の間に光を入れるなどの工夫も実施！<br>３人で協力し、１つの作品に。パネルの表示と曲は、ｍBotがコース走る時間に合わせてあり、スタートとゴール時に盛り上がりました。
+  tag: ロボット（toio、LEGO、アーテックなど）
+  creator:  元気な深川っ子
+  affiliation: CoderDojo長門
+  img: 3.jpg
+  description: 攻略するため、参考に『改正版Makeblock公式ｍBotで楽しむレッツ！ロボットプログラミング』の書籍をみた。
+  URL: https://youtu.be/Cl0zPaBE8TE
+  path_URL: 3
+
+- title: 簡単なロブロックスオビー
+  text: 簡単過ぎず難しすぎず作りました。
+  tag: Webサイト（HTML/CSS、JavaScript、Pythonなど）
+  creator: がんにゃむ
+  affiliation: 奈良
+  img: 4.jpg
+  description: ロブロックスでゲームを作ろう
+  URL: https://youtu.be/0UymyW3Khu8
+  path_URL: 4
+
+- title: 蛇ゲーム
+  text: 一から作りました。得点を変数ではなくスプライトで表示させました。
+  tag: Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）
+  creator: みのる
+  affiliation: CoderDojo吉祥寺
+  img: 5.jpg
+  description: オリジナル作品です。
+  URL: https://scratch.mit.edu/projects/880498565/
+  path_URL: 5
+
+- title: シューティングゲーム（はやと）8.9
+  text: 中学1年生の、はやとです。<br>昨年からCoderDojo長門に通うようになり、ほかのニンジャがシューティングゲームを創っていたのに刺激されて、今回はscratchでゲームをつくってみました。<br>ゲームをつくるために、ファミコンゲームの「EDF」などを参考にしています。<br>とくに、ゲームに出てくる敵のような「ゆらゆらした動き」になるようにプログラムを考えました。<br>動きを設定する際に、より面白くなるよう「sin」などを使って動かしてみました。<br>いろんなタイプの敵を作り、1つ1つに別の動きを設定して、飽きないようにしました。<br>また、スプライトに変数を言わせて、体力を見えるようにしました<br>全体が動いているように見せるためにスプライトを背景代わりにしました。<br>たくさんの人に楽しんでもらえると嬉しいです。　
+  tag: Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）
+  creator: はやとくん
+  affiliation: CoderDojo長門
+  img: 6.jpg
+  description: ファミコンゲームの「EDF」などを参考にしています。<br>ゲームに出てくる敵のような「ゆらゆらした動き」になるようにプログラムを考えました。
+  URL: https://scratch.mit.edu/projects/881491722/
+  path_URL: 6
+
+- title: my friendl オリジナル
+  text: こわいパペットたちがいるショッピングモールから脱出するゲームです。もともとあるホラーゲームですが、好きなので舞台などを変えて、自分で作ってみました。音声とかゲームオーバー画面を怖くすることにこだわって作りました。
+  tag: Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）
+  creator: せいじ
+  affiliation: Coderdojo西宮・梅田
+  img: 7.jpg
+  description: ＰCゲームのmy friendl neeighborhoodを参考にし、再現しました
+  URL: https://scratch.mit.edu/projects/880214859/
+  path_URL: 7
+
+- title: タイマー＆スケジュールアプリ
+  text: いつも自分は締切りぎりぎりに何かを一気に終わらせてしまい、出来が悪くなってしまう癖があるので、このアプリを作って、タイマーを使ってきちんと時間内に何かを終わらせられるようにした。それだけでは物足りないので、下に何をいつまでにするべきかを書き、しっかり時間内にそれを終わらせられるようなリストも作ってみた。終わったら左にチェックが打てるので、どこまで達成できているかを知ることができます。これからはこのアプリを使って物事を計画的に終わらせられるようにしたい。
+  tag: Scratch以外の言語による作品（Python、Ruby、p5.jsなどどんな言語・環境でもOK）
+  creator: りんたろう
+  affiliation: Coderdojo尾張、Coderdojo瑞穂
+  img: 8.jpg
+  description: タイマーとカウントダウンを同時に動かすところに少し苦労した。 runningとrunning2で分けることによって同時に動かせるようになった。
+  URL: https://drive.google.com/file/d/1SQFvm02Yb4tXKPxJs6NRLkXAKaFiyiL-/view?usp=drive_link
+  path_URL: 8
+
+- title: シーザー暗号作成読み取り器
+  text: 鍵の表記の仕方が「ROT+数字」なのでプログラムを書くにあたって「ROT」の部分は邪魔なので鍵から数字だけを取り出すようにプログラムを書くのを工夫しました。
+  tag: Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）
+  creator: yo_o
+  affiliation: CoderDoji師勝,CoderDojo名古屋
+  img: 9.jpg
+  description: 2022年７月号 子供の科学 自分専用パソコン第64回「暗号を使って秘密の会話をしよう」を参考にして作りました。<br>この参考書ではスプライトのコスチュームを使って暗号化・復号のプログラムを書いて作っていましたが、この作品はリストを使っています。<br>また、暗号鍵も自分で設定できるようにしました。
+  URL: https://scratch.mit.edu/projects/706260024/
+  path_URL: 9
+
+- title: アップアップシューティング
+  text: このゲームは、宇宙船の弾で敵を倒していくゲームです。また、ゲームには、ボスを倒すごとにプレイヤーがだんだんパワーアップしていきます。
+  tag: Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）
+  creator: えんどうまめ
+  affiliation: 奈良
+  img: 10.jpg
+  description: プレイヤーよりも敵キャラクターの個性を作るのに力を入れました。できるだけ敵と敵の能力が被らないように設定しました。
+  URL: https://scratch.mit.edu/projects/661312780/
+  path_URL: 10
+
+- title: 猫の箱庭
+  text: 猫が、いろいろなイベントがあいます！！そこで、猫を操作して、長い間いきのこらせましょう！！！カオスイベントは、雷⚡、隕石、暗闇があります。下にある、★、♥、渦巻、☀は、おすと、それぞれの、イベントがはっせいします。町をモチーフにしたワールドでいきのこりましょう！！
+  tag: Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）
+  creator: RP
+  affiliation: 奈良
+  img: 11.jpg
+  description: 僕、めっちゃがんばりました！
+  URL: https://scratch.mit.edu/projects/782065331/
+  path_URL: 11
+
+- title: 対戦ゲーム
+  text: このゲームは黒い大砲と白い大砲が弾を撃って、お互いの大砲に当てて、相手を倒すゲームです。<br>二人用なので、二人で対戦してみてください。<br>工夫したところは、弾を撃った時に音を鳴らすところです。
+  tag: Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）
+  creator: はづき
+  affiliation: 尾張
+  img: 12.jpg
+  description: 曲は魔王魂から取りました。<br>maou_game_battle27
+  URL: https://scratch.mit.edu/projects/881806999/
+  path_URL: 12
+
+- title: 鹿さんゲーム
+  text: このゲームは鹿さんを矢印キーで左右に動かして、鹿せんべいを取るゲームです。<br>鹿せんべいを取ると音が出て、スコアが1上がります。ニンニクとトウガラシを取ってもスコアは上がりません。<br>時間制限は60秒です。<br><br>工夫したところは、BGMをつけたところです。
+  tag: Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）
+  creator: みづき
+  affiliation: 尾張
+  img: 13.jpg
+  description: スプライトや背景のイラストを下記より参照しました。<br>鹿さん　piclike.net<br>鹿せんべい　blogspot.com<br>ニンニク　tsukatte.com<br>トウガラシ　yamakawa-pharm.jp<br>背景　jpdiamukpictz6q7.blogspot.com
+  URL: https://scratch.mit.edu/projects/881807418/
+  path_URL: 13
+
+- title: 心カフェメニューシステム
+  text: 毎週日曜日、家族にモーニングを作ってあげています。メニューがあって microbit の Aボタンを押すとf とフードのメニューの数字が増えていき、BボタンはAボタンと同じで、d とドリンクの数字が増える。そして 何にするか決まったら、A+Bを同時に押して、2個目の microbit に送られます。次の microbit に送られた時、2個目の microbit は、うけとったよと音をならします。音がなりおわっても、まだフードとドリンクの数字をまだ見れる様になっています。
+  tag: 電子工作（Raspberry Pi、Arduino、micro:bitなど）
+  creator: あやめ
+  affiliation: CoderDojo Owari
+  img: 14.jpg
+  description: お店の人がいつでも見れる様にずっとドリンクとフードを表示しておきました。はじめて microbit を2つ使ったので自分からもすごく上手に作れるんだなと思いました。お父さんにちょっと手伝ってもらいました。
+  URL: https://youtu.be/wDVRVy8kfw4?si=iprBYbr_2ywtT6WD
+  path_URL: 14
+
+- title: お太子ネコの挑戦状！歴史人物なまえクイズ
+  text: 本に出ていた漢字クイズをみて、私は歴史が好きなので歴史人物の名前クイズにしたら面白いかなと思いました。<br><br>初級と、私も最初読めなかった名前の歴史人物は上級にしました。<br><br>いつかもっと沢山クイズにしたいです。
+  tag: Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）
+  creator: ぶち
+  affiliation: 
+  img: 15.jpg
+  description: スクラッチプログラミング事例大全集 <br>すぐに使える!役に立つ! オールカラー・総ルビ! 100例収録!<br>松下孝太郎 / 山本光の漢字クイズを参考に、大好きな歴史に出てくる👦たちの名前クイズにしてみました。<br>本の通りにしないとうまく動かなくて、何度もメンターの先生に質問しました。<br>先生が沢山ヒントをくれて、動いて嬉しかったです。
+  URL: https://scratch.mit.edu/projects/878595154/
+  path_URL: 15
+
+- title: Yamaguchi maps
+  text: 30,000×30,000ブロック分の山口県のマインクラフトマップを作りました。<br>動画では紹介しきれないほど広いです。<br>起伏図から作ったので50時間くらいかかりました。<br>ちなみに、実際の4分の1くらいのスケールです。
+  tag: マインクラフト（ワールド、レッドストーン回路、MakeCode、Modなど）
+  creator: けんちゃん
+  affiliation: 
+  img: 16.jpg
+  description: 使ったアプリ<br>Worldpainter<br>MediBang Paint Pro<br>DaVinci Resolve
+  URL: https://www.youtube.com/watch?v=ELKJmNPu9yg
+  path_URL: 16
+
+- title: モ〜レッツキャッチ！ゲーム
+  text: micro:bitの付いた投げ縄を振り回して投げて牛を捕まえるゲームです。投げ縄が牛のツノに引っかかると牛が怒りだします。<br>牛の制作は家族全員でやりました。
+  tag: 電子工作（Raspberry Pi、Arduino、micro:bitなど）
+  creator: ショーピー256
+  affiliation: CoderDojo 倉敷　CoderDojo 吉備岡山
+  img: 17.jpg
+  description: https://eleshop.jp/shop/g/g402628/
+  URL: https://ibb.co/WGxZCxS
+  path_URL: 17
