--- a/_data/sponsor/bronze.yml
+++ b/_data/sponsor/bronze.yml
@@ -24,3 +24,8 @@
   logo: geolonia.png
   link: https://www.geolonia.com/
   msg: Geoloniaは、位置情報基盤を通じて、社会が抱える様々な課題を解決できる企業を目指すスタートアップです。IoT、スマートシティーなど、国、自治体、企業のDXが進むにつれて重要な「地図」「地理空間情報」「ロケーションデータ」の分野で、ウェブ地図提供事業、位置情報開発支援事業、ロケーションプラットフォーム事業を展開しています。
+- id: ut1
+  name: 株式会社ユウチ
+  logo: U-t1.png
+  link: http://www.2469samurai.com/
+  msg: Total outsourcing strategy consultant
