--- a/_data/countdown.yml
+++ b/_data/countdown.yml
@@ -18,7 +18,6 @@
 - title: '#5 みんなのセッション紹介'
   id: TpBt237Sgus
   date: 2023.08.03
-
-
-
-
+- title: '#6 ワークショップ紹介'
+  id: Td2WNL28xc0
+  date: 2023.08.10
