コメントアウトの位置の変更とYMLのファイルを変更しました。

--- a/_data/exhibition.yml
+++ b/_data/exhibition.yml
@@ -44,7 +44,7 @@
   affiliation: 奈良
   img: 4.jpg
   description: ロブロックスでゲームを作ろう
-  URL: https://youtu.be/0UymyW3Khu8
+  URL: https://www.youtube.com/watch?v=Tm5P76jfjuk
   path_URL: 4
 
 - title: 蛇ゲーム
