--- a/_data/exhibition.yml
+++ b/_data/exhibition.yml
@@ -151,7 +151,7 @@
   text: 本に出ていた漢字クイズをみて、私は歴史が好きなので歴史人物の名前クイズにしたら面白いかなと思いました。<br><br>初級と、私も最初読めなかった名前の歴史人物は上級にしました。<br><br>いつかもっと沢山クイズにしたいです。
   tag: Scratch 
   creator: ぶち
-  affiliation: 
+  affiliation: 住吉
   img: 15.jpg
   description: スクラッチプログラミング事例大全集 <br>すぐに使える!役に立つ! オールカラー・総ルビ! 100例収録!<br>松下孝太郎 / 山本光の漢字クイズを参考に、大好きな歴史に出てくる👦たちの名前クイズにしてみました。<br>本の通りにしないとうまく動かなくて、何度もメンターの先生に質問しました。<br>先生が沢山ヒントをくれて、動いて嬉しかったです。
   URL: https://scratch.mit.edu/projects/878595154/
@@ -161,7 +161,7 @@
   text: 30,000×30,000ブロック分の山口県のマインクラフトマップを作りました。<br>動画では紹介しきれないほど広いです。<br>起伏図から作ったので50時間くらいかかりました。<br>ちなみに、実際の4分の1くらいのスケールです。
   tag: マインクラフト 
   creator: けんちゃん
-  affiliation: 
+  affiliation: 長門
   img: 16.jpg
   description: 使ったアプリ<br>Worldpainter<br>MediBang Paint Pro<br>DaVinci Resolve
   URL: https://www.youtube.com/watch?v=ELKJmNPu9yg
