大博覧会のaタブの追加と現地展示のタグ🏷️を追加しました

--- a/_data/exhibition.yml
+++ b/_data/exhibition.yml
@@ -46,6 +46,7 @@
   description: ロブロックスでゲームを作ろう
   URL: https://www.youtube.com/watch?v=Tm5P76jfjuk
   path_URL: 4
+  local: 現地展示あります
 
 - title: 蛇ゲーム
   text: 一から作りました。得点を変数ではなくスプライトで表示させました。
@@ -76,6 +77,7 @@
   description: ＰCゲームのmy friendl neeighborhoodを参考にし、再現しました
   URL: https://scratch.mit.edu/projects/880214859/
   path_URL: 7
+  local: 現地展示あります
 
 - title: タイマー＆スケジュールアプリ
   text: いつも自分は締切りぎりぎりに何かを一気に終わらせてしまい、出来が悪くなってしまう癖があるので、このアプリを作って、タイマーを使ってきちんと時間内に何かを終わらせられるようにした。それだけでは物足りないので、下に何をいつまでにするべきかを書き、しっかり時間内にそれを終わらせられるようなリストも作ってみた。終わったら左にチェックが打てるので、どこまで達成できているかを知ることができます。これからはこのアプリを使って物事を計画的に終わらせられるようにしたい。
@@ -86,6 +88,7 @@
   description: タイマーとカウントダウンを同時に動かすところに少し苦労した。 runningとrunning2で分けることによって同時に動かせるようになった。
   URL: https://drive.google.com/file/d/1SQFvm02Yb4tXKPxJs6NRLkXAKaFiyiL-/view?usp=drive_link
   path_URL: 8
+  local: 現地展示あります
 
 - title: シーザー暗号作成読み取り器
   text: 鍵の表記の仕方が「ROT+数字」なのでプログラムを書くにあたって「ROT」の部分は邪魔なので鍵から数字だけを取り出すようにプログラムを書くのを工夫しました。
@@ -106,6 +109,7 @@
   description: プレイヤーよりも敵キャラクターの個性を作るのに力を入れました。できるだけ敵と敵の能力が被らないように設定しました。
   URL: https://scratch.mit.edu/projects/661312780/
   path_URL: 10
+  local: 現地展示あります
 
 - title: 猫の箱庭
   text: 猫が、いろいろなイベントがあいます！！そこで、猫を操作して、長い間いきのこらせましょう！！！カオスイベントは、雷⚡、隕石、暗闇があります。下にある、★、♥、渦巻、☀は、おすと、それぞれの、イベントがはっせいします。町をモチーフにしたワールドでいきのこりましょう！！
@@ -116,6 +120,7 @@
   description: 僕、めっちゃがんばりました！
   URL: https://scratch.mit.edu/projects/782065331/
   path_URL: 11
+  local: 現地展示あります
 
 - title: 対戦ゲーム
   text: このゲームは黒い大砲と白い大砲が弾を撃って、お互いの大砲に当てて、相手を倒すゲームです。<br>二人用なので、二人で対戦してみてください。<br>工夫したところは、弾を撃った時に音を鳴らすところです。
@@ -126,6 +131,7 @@
   description: 曲は魔王魂から取りました。<br>maou_game_battle27
   URL: https://scratch.mit.edu/projects/881806999/
   path_URL: 12
+  local: 現地展示あります
 
 - title: 鹿さんゲーム
   text: このゲームは鹿さんを矢印キーで左右に動かして、鹿せんべいを取るゲームです。<br>鹿せんべいを取ると音が出て、スコアが1上がります。ニンニクとトウガラシを取ってもスコアは上がりません。<br>時間制限は60秒です。<br><br>工夫したところは、BGMをつけたところです。
@@ -136,6 +142,7 @@
   description: スプライトや背景のイラストを下記より参照しました。<br>鹿さん　piclike.net<br>鹿せんべい　blogspot.com<br>ニンニク　tsukatte.com<br>トウガラシ　yamakawa-pharm.jp<br>背景　jpdiamukpictz6q7.blogspot.com
   URL: https://scratch.mit.edu/projects/881807418/
   path_URL: 13
+  local: 現地展示あります
 
 - title: 心カフェメニューシステム
   text: 毎週日曜日、家族にモーニングを作ってあげています。メニューがあって microbit の Aボタンを押すとf とフードのメニューの数字が増えていき、BボタンはAボタンと同じで、d とドリンクの数字が増える。そして 何にするか決まったら、A+Bを同時に押して、2個目の microbit に送られます。次の microbit に送られた時、2個目の microbit は、うけとったよと音をならします。音がなりおわっても、まだフードとドリンクの数字をまだ見れる様になっています。
@@ -146,6 +153,7 @@
   description: お店の人がいつでも見れる様にずっとドリンクとフードを表示しておきました。はじめて microbit を2つ使ったので自分からもすごく上手に作れるんだなと思いました。お父さんにちょっと手伝ってもらいました。
   URL: https://youtu.be/wDVRVy8kfw4?si=iprBYbr_2ywtT6WD
   path_URL: 14
+  local: 現地展示あります
 
 - title: お太子ネコの挑戦状！歴史人物なまえクイズ
   text: 本に出ていた漢字クイズをみて、私は歴史が好きなので歴史人物の名前クイズにしたら面白いかなと思いました。<br><br>初級と、私も最初読めなかった名前の歴史人物は上級にしました。<br><br>いつかもっと沢山クイズにしたいです。
@@ -156,6 +164,7 @@
   description: スクラッチプログラミング事例大全集 <br>すぐに使える!役に立つ! オールカラー・総ルビ! 100例収録!<br>松下孝太郎 / 山本光の漢字クイズを参考に、大好きな歴史に出てくる👦たちの名前クイズにしてみました。<br>本の通りにしないとうまく動かなくて、何度もメンターの先生に質問しました。<br>先生が沢山ヒントをくれて、動いて嬉しかったです。
   URL: https://scratch.mit.edu/projects/878595154/
   path_URL: 15
+  local: 現地展示あります
 
 - title: yamaguchi_maps
   text: 30,000×30,000ブロック分の山口県のマインクラフトマップを作りました。<br>動画では紹介しきれないほど広いです。<br>起伏図から作ったので50時間くらいかかりました。<br>ちなみに、実際の4分の1くらいのスケールです。
@@ -173,9 +182,10 @@
   creator: ショーピー256
   affiliation: 倉敷,吉備岡山
   img: 17.jpg
-  description: https://eleshop.jp/shop/g/g402628/
+  description: micro:bitを二つ使って連携させたところ
   URL: https://vimeo.com/854617665
   path_URL: 17
+  local: 現地展示あります
 
 - title: お金ゲーム
   text: 「お金ゲーム」は、ビスケットで作ったゲームです。落ちてくるお金を並べて、お金の多さを競います。同じお金を横に2つならべると、次のお金に変わり、お金がもらえます。タップして出せるお金は１円から１００円までです。例えば５円と５円をならべると、１０円になり、５円もらえます。最大は１０００円と１０００円がならぶと５０００円になり、1０００円もらます。<br>工夫したところは、「次」でランダムに表示したお金を、タップした時にちゃんと表示するとことです。「割れたメガネ」を使うことで、同じお金が表示されるように工夫しました。<br><br>また、お金を計算するプログラムも「割れたメガネ」を使って工夫しました。「円」という文字に「+1」を重ねたり、位をずらしたりしてプログラムし、正しくお金が増えるようにするところが難しかったです。
@@ -216,3 +226,13 @@
   description: ありません。
   URL: https://scratch.mit.edu/projects/873364568
   path_URL: 21
+
+- title: SC Wars & zss79.jp
+  text: SC Warsは、リミックスされることを前提として作っているので、新キャラクターが追加しやすいです。コスチュームを追加して、コスチューム名に必要な情報を入れるだけで、新キャラクターが追加されます。<br>zss79.jpは、slickを使って、スライドショーを作りました。一番苦労したところは、お問合せフォームの、inputタグの部分です。
+  tag: Scratch 
+  creator: zss79
+  affiliation: 
+  img: 22.jpg
+  description: SC Wars：にゃんこ大戦争 https://www.ponos.jp/
+  URL: https://drive.google.com/file/d/1n5AJfkBYEtcBRHdThvMJTJFvT2m-xoKW/view?usp=drive_link
+  path_URL: 22
