技術評論社ロゴデータを追加

--- a/_data/sponsor/in-kind.yml
+++ b/_data/sponsor/in-kind.yml
@@ -38,3 +38,9 @@
   logo: sacraya.jpg
   link: https://www.sacraya.net/
   description: 会場ネットワーク構築支援のご提供
+
+# - id: gihyo
+#   name: 技術評論社
+#   logo: gihyo-logo.svg
+#   link: https://book.gihyo.jp
+#   description: 書籍のご提供
