--- a/_data/exhibition.yml
+++ b/_data/exhibition.yml
@@ -262,7 +262,7 @@
   text: キラキラ星のホシの所は、上手く描けなかったから、考えて✴︎マークにしました。
   tag: 電子工作
   creator: KEi
-  affiliation: 奈良、生駒
+  affiliation: 奈良,生駒
   img: 25.jpg
   description: 楽譜は、小学校一年生の鍵盤ハーモニカの教科書を参考にしました。
   URL: https://drive.google.com/file/d/10rsc0l2oFq-6wp4YXUdunKKtB3wUagWx/view?usp=sharing
